crates/mappa/tests/snapshots/contract__on_disk_cascaded_ref.snap
---
source: crates/mappa/tests/contract.rs
expression: after.clone()
---
{
  "refs": [
    "mappa:the_mill"
  ],
  "data": {}
}
