crates/mappa/tests/snapshots/contract__on_disk_entity_file.snap
---
source: crates/mappa/tests/contract.rs
expression: raw.clone()
---
{
  "refs": [
    "mappa:the_moor"
  ],
  "data": {
    "coordinates": {
      "lat": 59.3293,
      "lon": 18.0686
    }
  }
}
